--- a/yatube/templates/posts/create_post.html
+++ b/yatube/templates/posts/create_post.html
@@ -12,7 +12,12 @@
           Новый пост
         </div>
         <div class="card-body">
-        {% load user_filters %}
+          <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {% for field in form %}
+              
+            {% endfor %} 
+            {% load user_filters %}
           {% if form.errors %}
             {% for field in form %}
               {% for error in field.errors %}
