--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -1,13 +1,9 @@
 {% extends "base.html" %}
 {% block title %}Технологии{% endblock %}
 {% block content %}
-<div class="row">
+<div class="container py-5">
+  <div class="row">
   <h1>Вот что я умею</h1>
-  {% comment %}
-    Боковой блок со списком технологий 
-    Займет всю ширину блока на мобильном
-    и 25% при размерах экрана ≥768px
-  {% endcomment %}
   <aside class="col-12 col-md-3">
     <ul class="list-group list-group-flush">
       <li class="list-group-item">
@@ -17,12 +13,7 @@
         Django
       </li>
     </ul>
-  </aside>
-  {% comment %}
-    Статья  
-    Займет всю ширину блока на мобильном
-    и 75% при размерах экрана ≥768px
-  {% endcomment %}
+  </aside>  
   <article class="col-12 col-md-9">
     <p>В настоящий момент я уже умею: </p>
     <p>- работать с базами данных, знаю принципы их работы. Хотя путаюсь еще с миграциями, но и их тоже покорю)</p>
