--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 <!DOCTYPE html>
 <html lang="ru">
 {% block title %}
@@ -16,6 +17,9 @@
     <li>
       Дата публикации: {{ post.pub_date|date:"d E Y" }}
     </li>
+    {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+    <img class="card-img my-2" src="{{ im.url }}">
+  {% endthumbnail %}
   </ul>
   <p>{{ post.text }}</p>    
   {% if not forloop.last %}<hr>{% endif %}
