--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,8 +1,25 @@
 {% extends 'base.html' %}
+{% load thumbnail %}
 {% block title %} Профайл пользователя {{ author }} {% endblock %}
 {% block content %}
 <h1>Все посты пользователя {{ user }}</h1>
-        <h3>Всего постов: {{ posts_count }}</h3>   
+        <h3>Всего постов: {{ posts_count }}</h3>
+        {% if following %}
+    <a
+      class="btn btn-lg btn-light"
+      href="{% url 'posts:profile_unfollow' author %}" role="button"
+    >
+      Отписаться
+    </a>
+  {% else %}
+      <a
+        class="btn btn-lg btn-primary"
+        href="{% url 'posts:profile_follow' author %}" role="button"
+      >
+        Подписаться
+      </a>
+   {% endif %}
+</div>
     {% for post in page_obj %}
         <article>
           <ul>
@@ -14,6 +31,9 @@
               Дата публикации: {{ post.pub_date|date:"d E Y" }}
             </li>
           </ul>
+          {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
+    <img class="card-img my-2" src="{{ im.url }}">
+  {% endthumbnail %}
           <p>{{ post.text }}</p>
           <a href="{% url 'posts:post_detail' post.pk %}">подробная информация </a>
         </article>
